--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-article-list></app-article-list>
-<app-article></app-article>
+<div class="app">
+  <app-article-list class="article-list"></app-article-list>
+  <app-article class="article"></app-article>
+  <app-article-form class="article-form"></app-article-form>
+</div>
 <router-outlet></router-outlet>
