add shared store, effect without dispatch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-article class="article"></app-article>
   <app-article-form class="article-form"></app-article-form>
 </div>
+<app-nav></app-nav>
 <router-outlet></router-outlet>
