--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,26 @@
 .app{
   display: grid;
   grid-template-areas: "l l" "f a";
+  gap: 1em;
 }
 
 .article-list{
   grid-area: l;
+  box-shadow: 0px 1px 4px 0px hsl(0 0% 70% / 1);
+  border-radius: 2px;
+  padding: 1em;
 }
 
 .article-form{
   grid-area: f;
+  box-shadow: 0px 1px 4px 0px hsl(0 0% 70% / 1);
+  border-radius: 2px;
+  padding: 1em;
 }
 
 .article{
   grid-area: a;
+  box-shadow: 0px 1px 4px 0px hsl(0 0% 70% / 1);
+  border-radius: 2px;
+  padding: 1em;
 }
